cms/css/styles.css
/* ... */
	aside#cms-lightbox div#cms-lightbox-container{
		margin: 0px auto;
		max-width: 500px;
		width: calc(100% - 100px);
		background-color: #FFF;
		margin-top: 100px;
		box-shadow: 10px 10px 10px rgba(0,0,0,0.3);
		position: relative;
		min-height: 100px;
		padding: 40px 10px 1px 10px;
		z-index: 65001;
		max-height: 700px;
		overflow-y: auto;
	}
		aside#cms-lightbox div#cms-lightbox-container div.dialogButtons{
			display: flex;
			margin-top: 10px;
		}
		aside#cms-lightbox div#cms-lightbox-container div.dialogButtons button.no{
			margin-right: 10px;
		}

		aside#cms-lightbox div#cms-lightbox-container div.dialogButtons button{
			background-color: #1d3457;
			border: 0px;
			color: #FFF;
			font-size: 15px;
			flex-grow: 1;
			padding: 10px;
			transition: .2s ease-out;
			cursor: pointer;
		}

		aside#cms-lightbox div#cms-lightbox-container div.dialogButtons button:hover{
			background-color: #365b94;
		}

		aside#cms-lightbox div#cms-lightbox-container > img{
			position: absolute;
			top: 5px;
			right: 5px;
			width: 30px;
			cursor: pointer;
		}

		aside#cms-lightbox div#cms-lightbox-container div#cms-lightbox-content div.cms-image-preview{
			width: calc(25% - 10px);
			height: 80px;
			display: inline-block;
			background-size: cover;
			background-position: center;
			margin: 5px;
			cursor: pointer;
		}

		aside#cms-lightbox div#cms-lightbox-container div#cms-lightbox-content div.cms-image-preview:hover{
			outline: 2px solid #2d8ac7;
		}

		aside#cms-lightbox div#cms-lightbox-container div#cms-lightbox-content div.cms-file-preview{
			margin-bottom: 10px;
			cursor: pointer;
			padding: 5px 0px 0px 0px;
		}
		
		aside#cms-lightbox div#cms-lightbox-container div#cms-lightbox-content div.cms-file-preview:hover{
			outline: 2px solid #2d8ac7;
		}

		aside#cms-lightbox div#cms-lightbox-container div#cms-lightbox-content div.cms-file-preview span {
			position: relative;
			bottom: 9px;
			left: 10px;
		}

		aside#cms-lightbox div#cms-lightbox-container div#cms-lightbox-content form input{
			display: none;
		}
		
		aside#cms-lightbox div#cms-lightbox-container div#cms-lightbox-content form label{
			background-color: #1d3457;
			color: #FFF;
			padding: 10px;
			margin-bottom: 10px;
			margin-left: 5px;
			display: inline-block;
			cursor: pointer;
		}
		
		aside#cms-lightbox div#cms-lightbox-container .image-align{
			position: relative;
			line-height: 0;
		}

		aside#cms-lightbox div#cms-lightbox-container .image-align img{
			max-width: 100%;
		}

		aside#cms-lightbox div#cms-lightbox-container .image-align span{
			width: 100%;
			height: 250px;
			position: absolute;
			left: 0;
			top: 0;
			background-color: rgba(255,255,255,0.2);
			border: 1px solid #fff;
			box-sizing: border-box;
		}
		
/*END LIGHTBOX*/

/*LOGIN*/
a.to_frontend,
a.forgot_password{
	padding: 10px 30px;
	position: relative;
	top: 10px;
	background-image: url(/cms/img/back.png);
	background-repeat: no-repeat;
	background-size: 10px;
	background-position: 10px center;
	right: 20px;
	color: #000;
	font-weight: bold;
	transition: .2s ease-out;
	font-size: 20px;
}

a.to_frontend:hover,
a.forgot_password:hover,
a.to_frontend:focus,
a.forgot_password:focus{
	right: 0px;
	filter: invert(100%);
}

a.forgot_password{
	position: absolute;
	right: -20px;
	top: 0px;
	background-image: url(/cms/img/questionmark.png);
	background-position: calc(100% - 10px) center;
}

div#login_container{
	overflow-x: hidden;
	width: 100%;
	height: 100%;
	background-color: #dedede;
	position: absolute;
	top: 0px;
	left: 0px;
	background-image: url(/cms/img/background_5.jpg);
	background-size: cover;
}
	div#login_container h1{
		font-size: 35px;
		letter-spacing: 2px;
		margin-bottom: 10px;
	}

	div#login_container p.message{
		margin: 10px 0px 5px 0px;	
	}

	div#login_container div#login-form-container{
		margin: 0px auto;
		width: 400px;
		margin-top: 200px;
	}

		div#login_container div#login-form-container form input[type=text],
		div#login_container div#login-form-container form input[type=password]{
			background-color: rgba(255,255,255,0.4);
			border: 1px solid rgba(255,255,255,0.6);
			padding: 10px;
			margin: 10px 0px 10px 0px;
			font-size: 20px;
			font-weight: lighter;
			transition: .2s ease-out;
			width: calc(100% - 20px);
			position: relative;
			right: 0px;
			bottom: 0px;
		}

		div#login_container div#login-form-container form > label span{
			position: relative;
			top: 5px;
			left: 20px;
			color: #FFF;
		}

		div#login_container div#login-form-container form > label {
			height: 32px;
			display: block;
		}

		div#login_container div#login-form-container form > label input{
			visibility: hidden;
		}
		
		div#login_container div#login-form-container form > label input:before{
			content: " ";
			display: inline-block;
			width: 25px;
			height: 25px;
			background-color: rgba(255,255,255,0.4);
			border: 1px solid rgba(255,255,255,0.6);
			visibility: visible;
			background-position: center;
			background-size: contain;
			background-repeat: no-repeat;
		}

		div#login_container div#login-form-container form > label input:checked:before{
			background-image: url("/cms/img/checkbox_login.png");
		}

		.inputTextColor:-webkit-autofill {
		    -webkit-text-fill-color: rgba(255,255,255,0.4);
		}

		div#login_container div#login-form-container form input[type=text]:focus,
		div#login_container div#login-form-container form input[type=password]:focus{
			box-shadow: 5px 5px 20px 10px rgba(0,0,0,0.1);
			right: 0px;
			bottom: 0px;
		}

		div#login_container div#login-form-container form input[type=submit]{
			background-color: rgba(0,0,0,0.5);
			border: 1px solid #000;
			padding: 10px;
			margin: 10px 0px 10px 0px;
			font-size: 20px;
			color: #FFF;
			width: calc(100% + 2px);
			cursor: pointer;
			transition: .2s ease-out;
		}
/* ... */

